--- a/index.html
+++ b/index.html
@@ -62,21 +62,14 @@
 		</ul>
 	</ul>
 </section>
-
-<section hidden="" class="future" style="top: -384px; display: block;">
-	<h2>The Challenge</h2>
+			
+<section hidden="" class="future" style="top: -20px; display: none;">
+	<h2>Containers</h2>
 	<p>
-		<img src="./Intro to Docker_files/the-challenge.png">
+		<img src="https://media.istockphoto.com/photos/crane-lifting-up-container-in-yard-picture-id486570435?s=612x612">
 	</p>
 </section>
-
-<section hidden="" class="future" style="top: -384px; display: block;">
-	<h2>The Matrix from Hell</h2>
-	<p>
-		<img src="./Intro to Docker_files/the-matrix-from-hell.png">
-	</p>
-</section>
-
+			
 <section hidden="" class="future" style="top: -20px; display: none;">
 	<h2>Cargo Transport Pre-1960</h2>
 	<p>
@@ -96,7 +89,23 @@
 	<p>
 		<img src="./Intro to Docker_files/intermodal-shipping-container.png">
 	</p>
+</section>			
+
+<section hidden="" class="future" style="top: -384px; display: block;">
+	<h2>The Challenge</h2>
+	<p>
+		<img src="./Intro to Docker_files/the-challenge.png">
+	</p>
 </section>
+
+<section hidden="" class="future" style="top: -384px; display: block;">
+	<h2>The Matrix from Hell</h2>
+	<p>
+		<img src="./Intro to Docker_files/the-matrix-from-hell.png">
+	</p>
+</section>
+
+
 
 <section hidden="" class="future" style="top: -20px; display: none;">
 	<h2>Docker is a Container System for Code</h2>
